Update student year in About Me section

--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">About Me</h2>
-                <p class="section-subtitle">Final year B.Tech IT student passionate about building scalable full-stack applications</p>
+                <p class="section-subtitle">3rd year B.Tech IT student passionate about building scalable full-stack applications</p>
             </div>
             <div class="about-grid">
                 <div class="profile-section">
