Add SSMS project - Smart Scholarship Management System

--- a/index.html
+++ b/index.html
@@ -533,6 +533,10 @@
             background: linear-gradient(135deg, #6b4423 0%, #228b22 100%);
         }
 
+        .project-image.ssms {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
+
         .project-overlay {
             position: absolute;
             inset: 0;
@@ -1127,6 +1131,28 @@
                         </div>
                         <h3>Library Management System (LMS)</h3>
                         <p>Java console application for managing library operations with MongoDB database connection for efficient data storage.</p>
+                    </div>
+                </div>
+
+                <!-- New Project 4 - SSMS -->
+                <div class="project-card reveal">
+                    <div class="project-image ssms">
+                        <i class="fas fa-award"></i>
+                        <div class="project-overlay">
+                            <a href="https://github.com/GOPALAKRISHNAN2006/SmartScholarshipManagementSystem" class="project-link" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-tags">
+                            <span class="tag">Java</span>
+                            <span class="tag">MongoDB</span>
+                            <span class="tag">MVC</span>
+                            <span class="tag">Console App</span>
+                        </div>
+                        <h3>Smart Scholarship Management System (SSMS)</h3>
+                        <p>Console-based scholarship management system with MVC architecture, MongoDB integration, student/admin roles, and secure authentication.</p>
                     </div>
                 </div>
             </div>
