Add HireReady AI Interview Portal project

--- a/index.html
+++ b/index.html
@@ -537,6 +537,10 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
 
+        .project-image.hireready {
+            background: linear-gradient(135deg, #ff6b6b 0%, #4ecdc4 100%);
+        }
+
         .project-overlay {
             position: absolute;
             inset: 0;
@@ -1153,6 +1157,28 @@
                         </div>
                         <h3>Smart Scholarship Management System (SSMS)</h3>
                         <p>Console-based scholarship management system with MVC architecture, MongoDB integration, student/admin roles, and secure authentication.</p>
+                    </div>
+                </div>
+
+                <!-- New Project 5 - HireReady -->
+                <div class="project-card reveal">
+                    <div class="project-image hireready">
+                        <i class="fas fa-user-tie"></i>
+                        <div class="project-overlay">
+                            <a href="https://github.com/GOPALAKRISHNAN2006/HireReady" class="project-link" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-tags">
+                            <span class="tag">MERN Stack</span>
+                            <span class="tag">OpenAI GPT-4</span>
+                            <span class="tag">Google Gemini</span>
+                            <span class="tag">Socket.io</span>
+                        </div>
+                        <h3>HireReady - AI Interview Portal</h3>
+                        <p>AI-powered interview preparation platform with mock interviews, real-time NLP feedback, analytics dashboard, and personalized career roadmaps.</p>
                     </div>
                 </div>
             </div>
